# srm-cam

./: .gitignore  HANDOFF.md  LICENSE  README.md  pyproject.toml
docs/: 2026-06-25-gui-redesign-handoff.md  2026-06-25-progress-rework-and-probe-speed.md  2026-06-25-srm20-spi-and-bed-leveling.md  2026-06-26-fiducial-registration.md  2026-06-26-multi-region-rework.md  2026-06-30-spindle-spinup-and-lead-in.md  2026-06-30-vbit-engraving-support.md  2026-07-02-gui2-cockpit-design.md  HANDOFF.md  design.md  gui-manual-check.md  parity-mosfet_test.md  usage.md
examples/: board_heightmap.csv  presets.json
gerber2rml/: __init__.py  __main__.py  analysis.py  cli.py  config.py  doctor.py  doublesided.py  loader.py  report.py  toolpath.py
hardware/: README.md
legacy/: README.md  gcode_to_rml.py  test_square.nc  test_square.rml
packaging/: README.md  build.ps1  installer.iss  launcher.py  requirements-build.txt  srm-cam.spec
scripts/: spike_gerbonara.py
tests/: test_analysis.py  test_backends_registry.py  test_bedviz.py  test_bitviz.py  test_calibration.py  test_canvas.py  test_cli.py  test_config.py  test_cutout.py  test_diagnostics.py  test_doctor.py  test_doublesided.py  test_dowel_test.py  test_drill.py  test_drill_files.py  test_drill_split.py  test_estimate.py  test_fiducial.py  test_form.py  test_gcode_backend.py  test_gcode_parse.py  test_hole_test.py  test_leadin.py  test_level_test.py  test_leveling.py  test_loader.py  test_outline_arcs.py  test_placement.py  test_presets.py  test_preview.py  test_progress.py  test_report.py  test_select.py  test_simulate.py  (+8 more)
(+123 files in other folders)
