[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "gerber2rml"
version = "0.0.1"
description = "Gerber/Excellon to RML CAM tool for the Roland SRM-20"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "gerbonara>=1.0",
    "shapely>=2.0",
    "PySide6>=6.5",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
]

[project.gui-scripts]
gerber2rml = "gerber2rml.gui.app:main"

[tool.setuptools.packages.find]
include = ["gerber2rml*"]
